# kimina-lean-server

./: .env.template  .gitignore  .pre-commit-config.yaml  Dockerfile  README-client.md  README.md  aristotle_algo.md  backend-end-plan.md  compose.yaml  pyproject.toml  pyrightconfig.json  setup.sh
docs/: README.md  backend-end-plan.md  backend_andor_enhancement.md  bounded-backend-decision.md  canonical_search.md  dual-mode-separation-plan.md  exec-diagnostics-spike.md  exec-observability-plan.md  in-process-parallel-plan.md  lean-task-backend-research.md  leanfoundry_system_design_v10.md  leanfoundry_system_design_v11.md  leanfoundry_system_design_v8.md  leanfoundry_system_design_v9.md  notes.md  pantograph-utf8-panic.md  safety_net.md
examples/: exec_env_smoke.py  exec_panic_repro.py  pantograph_step_benchmark.py  pantograph_task_compare_benchmark.py
kimina_client/: __init__.py  async_client.py  exec_env.py  exec_journal.py  exec_models.py  import json.py  sync_client.py
server/: __main__.py  _exec_server_cli.py  exec_backend_utils.py  exec_backends.py  exec_lifecycle.py  exec_metrics.py  exec_request_limiter.py  exec_server_config.py  exec_state_files.py  exec_stats.py  logger.py  main.py  manager.py  pantograph_goal.py  pantograph_manager.py  pantograph_normalize.py  pantograph_worker.py  repl.py  schemas_exec.py  settings.py  single_process_lock.py  startup_banners.py  state_store.py
tests/: conftest.py  test_api.py  test_exec_api.py  test_exec_backend.py  test_exec_backends.py  test_exec_client.py  test_exec_lifecycle.py  test_exec_request_limiter.py  test_exec_schemas.py  test_exec_server_config.py  test_exec_validation.py  test_header_offset.py  test_manager.py  test_mode_gate.py  test_old_vs_task_utils.py  test_repl.py  (+5 more)
(+16 files in other folders)
