[project]
name = "kimina-lean-server-dev"
version = "0.0.0"
description = "Local development environment for Kimina Lean Server."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "fastapi>=0.115.13",
    "uvicorn>=0.34.3",
    "prisma>=0.15.0",
    "psutil>=7.0.0",
    "google-cloud-logging>=3.12.1",
    "rich>=14.0.0",
    "loguru>=0.7.3",
    "pydantic-settings>=2.10.0",
    "python-dotenv>=1.1.0",
    "pip>=25.1.1",
    "httpx>=0.28.1",
    "requests>=2.31.0",
    "tenacity>=9.1.2",
    "datasets>=4.0.0",
    "colorama>=0.4.6",
    "tabulate>=0.9.0",
    "pantograph",
]

[tool.uv]
package = false
dev-dependencies = [
    "pytest-cov>=6.2.1",
    "pytest>=8.4.1",
    "mypy>=1.16.1",
    "pytest-sugar>=1.0.0",
    "pytest-xdist>=3.8.0",
    "pytest-asyncio>=1.0.0",
    "pyright>=1.1.402",
    "pre-commit>=4.2.0",
    "pytest-icdiff>=0.9",
    "asgi-lifespan>=2.1.0",
]

[tool.uv.sources]
pantograph = { git = "https://github.com/stanford-centaur/PyPantograph", rev = "ffa7f243824d2762825abddb1e9f6e939ede761f" }

[tool.pytest.ini_options]
addopts = "--asyncio-mode=auto --maxfail=1 --cov=server -m 'not perfs and not match' -x --ignore=./tsts_old"
norecursedirs = ["tsts_old"]
log_cli_level = "INFO"
markers = [
    "perfs: performance tests that are not run by default",
    "match: tests which ensure backward-compatibility with kimina-lean-server"
]

[tool.mypy]
plugins = ['pydantic.mypy']
strict = true
files = ["kimina_client", "server", "tests"]
exclude = "^(server/server_old|tsts_old/)"
ignore_missing_imports = true
allow_untyped_decorators = true
disable_error_code = ["unused-ignore"]
